created PythonEvalModel script
also moved some mutual elements used by PythonTrainModel and PythonEvalModel to own functions (and folders)

--- a/Python-train-model/.gitignore
+++ b/Python-train-model/.gitignore
@@ -1,6 +1,7 @@
 # PyCharm folder
 .idea
+consts/__pycache__
 functions/__pycache__
 functions/steps/__pycache__
 models/__pycache__
-/outputModels
+outputModels
