added batch script "batch-showConfusionMatrix.py" to show confusion matrix based on output result file

--- a/Python-eval-all/test/.gitignore
+++ b/Python-eval-all/test/.gitignore
@@ -2,3 +2,6 @@ input
 output
 functions/__pycache__
 consts/__pycache__
+batch-scripts/__pycache__
+batch-scripts/functions/__pycache__
+batch-scripts/exceptions/__pycache__
