added more metrics to "Python-eval-all(test)" script

--- a/Python-eval-all/test/.gitignore
+++ b/Python-eval-all/test/.gitignore
@@ -1,6 +1,7 @@
 input
 output
 functions/__pycache__
+functions/metrics/__pycache__
 consts/__pycache__
 batch-scripts/__pycache__
 batch-scripts/functions/__pycache__
