repaired another bug with OpenPose - too many row deletion in some cases

--- a/Python-eval-all/single-classify/.gitignore
+++ b/Python-eval-all/single-classify/.gitignore
@@ -8,5 +8,6 @@ functions/skeletons/OpenPose/outputTemp
 functions/skeletons/OpenPose/opencv_world452.dll
 functions/skeletons/OpenPose/hand
 functions/classify/__pycache__
+functions/classify/exceptions/__pycache__
 functions/preprocessing/__pycache__
 functions/skeletons/exceptions/__pycache__
