started creating batch script to compare datasets
OpenPose v1 vs v2 (where are changes in input skeletons)
also reparied "loadData" function

--- a/Python-train-model/.gitignore
+++ b/Python-train-model/.gitignore
@@ -5,3 +5,5 @@ functions/__pycache__
 functions/steps/__pycache__
 models/__pycache__
 outputModels
+batch-scripts/__pycache__
+batch-scripts/output
