created multiple train loso batch script

--- a/Python-train-model/.gitignore
+++ b/Python-train-model/.gitignore
@@ -9,3 +9,5 @@ batch-scripts/__pycache__
 batch-scripts/compare-datasets/__pycache__
 batch-scripts/compare-datasets/output
 batch-scripts/compare-datasets/functions/__pycache__
+batch-scripts/train-loso/__pycache__
+batch-scripts/train-loso/functions/__pycache__
