--- a/Python-train-model/.gitignore
+++ b/Python-train-model/.gitignore
@@ -11,3 +11,5 @@ batch-scripts/compare-datasets/output
 batch-scripts/compare-datasets/functions/__pycache__
 batch-scripts/train-loso/__pycache__
 batch-scripts/train-loso/functions/__pycache__
+batch-scripts/train-standard/__pycache__
+batch-scripts/train-standard/functions/__pycache__
